--- a/config/ImageNet_LT/feat_uniform_synth_data.yaml
+++ b/config/ImageNet_LT/feat_uniform_synth_data.yaml
@@ -27,14 +27,15 @@ training_opt:
   batch_size: 512
   dataset: ImageNet_LT
   synth_data: true
-  synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/test
+  # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/test # MIDI 
+  synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond
   display_step: 10
   feature_dim: 2048
   log_dir: ./logs/ImageNet_LT/models/resnext50_uniform_e90
   log_root: /logs/ImageNet_LT
   num_classes: 1000
   num_epochs: 150
-  num_workers: 4 
+  num_workers: 2 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
