--- a/config/ImageNet_LT/feat_uniform_synth_data.yaml
+++ b/config/ImageNet_LT/feat_uniform_synth_data.yaml
@@ -13,31 +13,32 @@ networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, feat_dim: 2048, log_dir: ./logs/ImageNet_LT/models/resnext50_uniform_e90,
+    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT/models/resnext18_rand_img_cond,
       num_classes: 1000, stage1_weights: false}
   feat_model:
-    def_file: ./models/ResNext50Feature.py
+    def_file: ./models/ResNext18Feature.py
     fix: false
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT/models/resnext50_uniform_e90,
+    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT/models/resnext18_rand_img_cond,
       stage1_weights: false, use_fc: false, use_selfatt: false}
 shuffle: false
 training_opt:
-  backbone: resnext50
+  backbone: resnext18
   batch_size: 512
   dataset: ImageNet_LT
   synth_data: true
-  # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/test # MIDI 
-  synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond
+  synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/rand_img_cond  # MIDI 
+  # synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond # A40
   display_step: 10
-  feature_dim: 2048
-  log_dir: ./logs/ImageNet_LT/models/resnext50_uniform_e90
+  feature_dim: 512 # ResNext18 
+  # 2048 # ResNext50 
+  log_dir: ./logs/ImageNet_LT/models/resnext18_rand_img_cond
   log_root: /logs/ImageNet_LT
   num_classes: 1000
   num_epochs: 150
-  num_workers: 2 
+  num_workers: 4 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
-  stage: resnext50_uniform_e90
+  stage: resnext18_rand_img_cond
   sub_dir: models
