90 subset Balanced Softmax runs kicked off

--- a/config/ImageNet_LT/synth_data_90subset.yaml
+++ b/config/ImageNet_LT/synth_data_90subset.yaml
@@ -1,8 +1,8 @@
 coslr: true
 criterions:
   PerformanceLoss:
-    def_file: ./loss/SoftmaxLoss.py
-    loss_params: {}
+    def_file: ./loss/BalancedSoftmaxLoss.py
+    loss_params: {freq_path: ./cls_freq/ImageNet_LT_train_90.json}
     optim_params: null
     weight: 1.0
 endlr: 0.0
