Found and fixed bug where NAS synthetic data loading results in minibatches of the same classgit add .! Test NAS and datastor1 run kicked off

--- a/config/ImageNet_LT/synth_data_90subset.yaml
+++ b/config/ImageNet_LT/synth_data_90subset.yaml
@@ -13,13 +13,13 @@ networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_90subset/models/resnext18_dropout,
+    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_90_BS/models/resnext18_rand_img_cond,
       num_classes: 90, stage1_weights: false}
   feat_model:
     def_file: ./models/ResNext18Feature.py
     fix: false
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_90subset/models/resnext18_dropout,
+    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_90_BS/models/resnext18_rand_img_cond,
       stage1_weights: false, use_fc: false, use_selfatt: false}
 shuffle: false
 training_opt:
@@ -28,18 +28,18 @@ training_opt:
   dataset: ImageNet_LT
   subset: 90
   synth_data: true
-  synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/dropout_90  # MIDI 
-  # synth_root: /datastor1/jiahuikchen/synth_ImageNet/dropout # A40
+  # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/embed_cutmix_90  # MIDI 
+  synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond_90 # A40
   display_step: 10
   feature_dim: 512 # ResNext18 
   # 2048 # ResNext50 
-  log_dir: ./logs/ImageNet_LT_90subset/models/resnext18_dropout
-  log_root: /logs/ImageNet_LT_90subset
+  log_dir: ./logs/ImageNet_LT_90_BS/models/resnext18_rand_img_cond
+  log_root: /logs/ImageNet_LT_90_BS
   num_classes: 90 
   num_epochs: 150
   num_workers: 4 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
-  stage: resnext18_dropout
+  stage: resnext18_rand_img_cond
   sub_dir: models
