--- a/config/ImageNet_LT/baseline_subset.yaml
+++ b/config/ImageNet_LT/baseline_subset.yaml
@@ -2,7 +2,7 @@ coslr: true
 criterions:
   PerformanceLoss:
     def_file: ./loss/BalancedSoftmaxLoss.py
-    loss_params: {freq_path: ./cls_freq/ImageNet_LT_train_30_many_to_few.json}
+    loss_params: {freq_path: ./cls_freq/ImageNet_LT_train_30_many_to_median_only.json}
     optim_params: null
     weight: 1.0
 endlr: 0.0
@@ -13,33 +13,33 @@ networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_30_many_to_few/models/resnext18_no_synth,
+    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_30_many_to_median_only/models/resnext18_no_synth,
       num_classes: 10, stage1_weights: false}
   feat_model:
     def_file: ./models/ResNext18Feature.py
     fix: false
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_30_many_to_few/models/resnext18_no_synth,
+    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_30_many_to_median_only/models/resnext18_no_synth,
       stage1_weights: false, use_fc: false, use_selfatt: false}
 shuffle: false
 training_opt:
   backbone: resnext18
   batch_size: 512
   dataset: ImageNet_LT
-  subset: 30_many_to_few
+  subset: 30_many_to_median_only
   # synth_data: true
   # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/rand_img_cond  # MIDI 
   # synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond # A40
   display_step: 10
   feature_dim: 512 # ResNext18 
   # 2048 # ResNext50 
-  log_dir: ./logs/ImageNet_LT_30_many_to_few/models/resnext18_no_synth
-  log_root: /logs/ImageNet_LT_30_many_to_few
+  log_dir: ./logs/ImageNet_LT_30_many_to_median_only/models/resnext18_no_synth
+  log_root: /logs/ImageNet_LT_30_many_to_median_only
   num_classes: 10 
   num_epochs: 150
   num_workers: 4 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
-  stage: resnext18_rand_no_synth
+  stage: resnext18_no_synth
   sub_dir: models
