--- a/config/ImageNet_LT/synth_data_30subset.yaml
+++ b/config/ImageNet_LT/synth_data_30subset.yaml
@@ -13,13 +13,13 @@ networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_embed_cutmix_dropout,
+    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_rand_img_cond,
       num_classes: 30, stage1_weights: false}
   feat_model:
     def_file: ./models/ResNext18Feature.py
     fix: false
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_embed_cutmix_dropout,
+    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_rand_img_cond,
       stage1_weights: false, use_fc: false, use_selfatt: false}
 shuffle: false
 training_opt:
@@ -29,11 +29,11 @@ training_opt:
   subset: 30 
   synth_data: true
   # synth_root: /data/jiahuic/synth_LT_data/ImageNetLT/dropout_30  # NAS 
-  synth_root: /datastor1/jiahuikchen/synth_ImageNet/embed_cutmix_30_dropout # datastor1
+  synth_root: /datastor1/jiahuikchen/synth_ImageNet/rand_img_cond_30 # datastor1
   display_step: 10 
   feature_dim: 512 # ResNext18 
   # 2048 # ResNext50 
-  log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_embed_cutmix_dropout
+  log_dir: ./logs/ImageNet_LT_30_BS/models/resnext18_rand_img_cond
   log_root: /logs/ImageNet_LT_30_BS
   num_classes: 30 
   num_epochs: 150
@@ -41,5 +41,5 @@ training_opt:
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
-  stage: resnext18_embed_cutmix_dropout
+  stage: resnext18_rand_img_cond
   sub_dir: models
