--- a/config/ImageNet_LT/full_synth_data.yaml
+++ b/config/ImageNet_LT/full_synth_data.yaml
@@ -1,8 +1,8 @@
 coslr: true
 criterions:
   PerformanceLoss:
-    def_file: ./loss/SoftmaxLoss.py
-    loss_params: {}
+    def_file: ./loss/BalancedSoftmaxLoss.py
+    loss_params: {freq_path: ./cls_freq/ImageNet_LT_train.json}
     optim_params: null
     weight: 1.0
 endlr: 0.0
@@ -13,32 +13,32 @@ networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, feat_dim: 512, log_dir: ./logs/ImageNet_LT/models/resnext18_dropout,
+    params: {dataset: ImageNet_LT, feat_dim: 2048, log_dir: ./logs/ImageNet_LT/models/resnext50_dropout,
       num_classes: 1000, stage1_weights: false}
   feat_model:
-    def_file: ./models/ResNext18Feature.py
+    def_file: ./models/ResNext50Feature.py
     fix: false
     optim_params: {lr: 0.2, momentum: 0.9, weight_decay: 0.0005}
-    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT/models/resnext18_dropout,
+    params: {dataset: ImageNet_LT, dropout: null, log_dir: ./logs/ImageNet_LT/models/resnext50_dropout,
       stage1_weights: false, use_fc: false, use_selfatt: false}
 shuffle: false
 training_opt:
-  backbone: resnext18
+  backbone: resnext50
   batch_size: 512
   dataset: ImageNet_LT
   synth_data: true
   # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/dropout  # MIDI 
   synth_root: /datastor1/jiahuikchen/synth_ImageNet/dropout # A40
   display_step: 10
-  feature_dim: 512 # ResNext18 
+  feature_dim: 2048 # 512 # ResNext18 
   # 2048 # ResNext50 
-  log_dir: ./logs/ImageNet_LT/models/resnext18_dropout
+  log_dir: ./logs/ImageNet_LT/models/resnext50_dropout
   log_root: /logs/ImageNet_LT
   num_classes: 1000
   num_epochs: 150
-  num_workers: 4 
+  num_workers: 2 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
-  stage: resnext18_dropout
+  stage: resnext50_dropout
   sub_dir: models
