--- a/config/ImageNet_LT/full_synth_data.yaml
+++ b/config/ImageNet_LT/full_synth_data.yaml
@@ -9,6 +9,7 @@ endlr: 0.0
 last: false
 memory: {centroids: false, init_centroids: false}
 model_dir: null
+distributed: true 
 networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
