--- a/config/ImageNet_LT/synth_data_90subset.yaml
+++ b/config/ImageNet_LT/synth_data_90subset.yaml
@@ -10,6 +10,7 @@ last: false
 memory: {centroids: false, init_centroids: false}
 model_dir: null 
 # model_checkpoint: /datastor1/jiahuikchen/LT-classification/logs/ImageNet_LT_90_BS/models/resnext18_embed_cutmix_dropout_full/latest_model_checkpoint.pth 
+distributed: false
 networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
