--- a/config/ImageNet_LT/full_synth_data.yaml
+++ b/config/ImageNet_LT/full_synth_data.yaml
@@ -9,7 +9,7 @@ endlr: 0.0
 last: false
 memory: {centroids: false, init_centroids: false}
 model_dir: null
-distributed: true 
+distributed: false 
 networks:
   classifier:
     def_file: ./models/DotProductClassifier.py
@@ -29,7 +29,8 @@ training_opt:
   dataset: ImageNet_LT
   synth_data: true
   # synth_root: /mnt/zhang-nas/jiahuic/synth_LT_data/ImageNetLT/dropout  # MIDI 
-  synth_root: /datastor1/jiahuikchen/synth_ImageNet/dropout # A40
+  # synth_root: /datastor1/jiahuikchen/synth_ImageNet/dropout # A40
+  synth_root:  /work/09842/jc98685/ls6/dropout # TACC
   display_step: 10
   feature_dim: 2048 # 512 # ResNext18 
   # 2048 # ResNext50 
@@ -37,7 +38,7 @@ training_opt:
   log_root: /logs/ImageNet_LT
   num_classes: 1000
   num_epochs: 150
-  num_workers: 2 
+  num_workers: 3 
   open_threshold: 0.1
   sampler: null
   scheduler_params: {gamma: 0.1, step_size: 30}
